<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainPage">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="245dp"
                android:layout_height="239dp"
                android:layout_marginEnd="400dp"
                android:layout_marginBottom="72dp"
                android:contentDescription="@string/image_of_blue_crewmate_from_among_us"
                android:rotation="-30"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.072"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_goneMarginStart="-30dp"
                app:srcCompat="@drawable/cyan_among_us_character" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="199dp"
                android:layout_height="257dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/image_of_red_crewmate_from_among_us"
                android:rotation="30"
                android:scaleX="-1"
                android:transformPivotX="30dp"
                android:translationX="200dp"
                android:translationY="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/red_among_us_png" />

            <TextView
                android:id="@+id/mainTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign up"
                android:textColor="#FFFFFF"
                android:textSize="34sp"
                app:layout_constraintBottom_toTopOf="@+id/tableLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:minHeight="50dp">

                    <EditText
                        android:id="@+id/codeName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="username"
                        android:ems="10"
                        android:hint="@string/code_name"
                        android:inputType="textPersonName"
                        android:minHeight="48dp"
                        android:shadowColor="#FFFFFF"
                        android:textColor="#00897B"
                        android:textColorHint="#00BAA7" />

                    <Button
                        android:id="@+id/joinButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/signUpButton"
                        app:layout_constraintBaseline_toBaselineOf="@+id/codeName" />

                </TableRow>



            </TableLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>