<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetReady">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="613dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="148dp"
            android:layout_height="140dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/red_among_us_png" />

        <TextView
            android:id="@+id/textIntro3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="You can creat a crew or join on..."
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <Button
            android:id="@+id/joinAGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonJoinRoom"
            app:layout_constraintBottom_toBottomOf="@+id/inputTextRoomName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.388"
            app:layout_constraintStart_toEndOf="@+id/inputTextRoomName"
            app:layout_constraintTop_toTopOf="@+id/inputTextRoomName" />

        <EditText
            android:id="@+id/inputTextRoomName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:hint="@string/inputNameRoom"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textIntro3"
            app:layout_constraintVertical_bias="0.492" />

        <Button
            android:id="@+id/buttonCreateRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/createRoomButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputTextRoomName" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</layout>